bobcat (2.03.00)

  * Bobcat is compiled by g++ --std=c++0x.
  * Stat::modeStr() bug repaired due to which it always showed rwxrwxrwx
  * Removed deprecated getPid() member from Fork
  * Removed deprecated get...Fd() members from Pipe
  * Removed deprecated get...Fd() members from Selector
  * Selector's setAlarm() member performs a validity check on the specified 
    alarm time 
  * Selector's wait() member handles no-alarm specifications correctly (i.e., 
    according to the description in the select(2) man-page.
  * Redirector has a new member: through()
  * IFdStreambuf::xsgetn() was reimplemented to allow unformated reads from 
    std::istream (and IFdStream) objects without referring to underflow.
  * InetAddress has new members sockaddr_inPtr() returning pointers to its
    sockaddr_in data member.
  * Repaired bugs in DateTime constructors accepting strings, redefined many
    of DateTime's functionality, see its man page.
  * (Almost) all unary argument constructors now `explicit'
  * Constructors that can safely throw exceptions, rather than using `verify'
    do so from now on. The `verify' member remains, albeit empty,  available 
    in the class interfaces. 
    Affected classes: Glob, OneKey, User, Pipe, SocketBase, XPointer
  * Classes for which a move constructor is useful received a move
    constructor. Currently: AutoPtr, Glob, Pattern,
  * insert and extraction operators (operator<<, operator>>) are now defined
    within the namespace FBB and no longer in the std namespace (except for 
    operator<< defined int msg/msg which is in std::)
  * Added BigInt as the first (optionally added) class depending on OpenSSL.
    The plan is to add more openssl-based classes in the (near) future. BigInt
    wraps OpenSSL's unlimited precision number feature implemented by
    OpenSSL's BN_ functions.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Wed, 22 Jul 2009 17:37:27 +0200

bobcat (2.02.03)

  * Missed another EOF in MultiStreambuf. Now repaired.
