@@ -71,3 +71,4 @@ user
 x2a
 
 # Classes compiled from icmake/special: xpointer, milter, ssl
+ohexstreambuf
