@@ -1,3 +1,4 @@
 #   This file is included from icmake/special
 
 bigint
+digestbuf
