@@ -1,3 +1,5 @@
+Add getword(), setword(), operator^ and other common operators to BigInt
+
 Provide examples in the following man-pages:
 
 ifdstreambuf.yo
