@@ -1,0 +1,8 @@
+#include "bigint.ih"
+
+BigInt &BigInt::setNegative(bool negative)
+{
+    BN_set_negative(&d_bn, negative);
+    return *this;
+}
+
