@@ -5,8 +5,8 @@
 #include <string>
 #include <openssl/evp.h>
 #include <bobcat/errno>
-//#include <bobcat/ohexstreambuf>
-#include "../ohexstreambuf/ohexstreambuf"
+#include <bobcat/ohexstreambuf>
+// #include "../ohexstreambuf/ohexstreambuf"
 
 namespace FBB
 {
