@@ -1,4 +1,8 @@
 #!/bin/sh
 
-g++ --std=c++0x -O2 -Wall -o driver driver.cc -lssl -lbobcat \
+ln -s .. bobcat
+
+g++ -I. --std=c++0x -O2 -Wall -o driver driver.cc -lssl -lbobcat \
       -L../../ohexstreambuf/tmp -L../tmp -ldigestbuf  -lohexstreambuf
+
+rm bobcat
