@@ -71,6 +71,9 @@ provided by bf(man -e bobcat manipulators).
     bf(FBB::DateTime): Manipulations with date and time values.nl()
     Manpage(datetime)
 
+    bf(FBB::DigestBuf): Computeting message digests.nl()
+    Manpage(digestbuf)
+
     bf(FBB::Errno): Defines objects which may be thrown as an exception.nl()
     Manpage(errno)
 
@@ -212,6 +215,10 @@ provided by bf(man -e bobcat manipulators).
     specialization folding text lines between left and right margins.nl()
     Manpage(ofoldstreambuf)
 
+    bf(FBB::OHexStreambuf): bf(OHexStreambuf) (bf(std::streambuf))
+    specialization inserting characters into a stream by their hex values.nl()
+    Manpage(ohexstreambuf)
+
     bf(FBB::OneKey): Single keystroke input, not requiring `Return'.nl()
     Manpage(onekey)
 
@@ -307,7 +314,22 @@ END COMMENT)
 
 manpagesection(CATEGORIES)
 
-    This section groups classes that somehow belong together:
+    This section groups classes that somehow belong together. The following
+categories are offered:
+    itemization(
+    it() bf(COMMAND LINE INTERFACE AND CONFIGURATION FILES)
+    it() bf(CONVERSIONS)
+    it() bf(DATE AND TIME)        
+    it() bf(ERRORS AND MESSAGE HANDLING)
+    it() bf(GENERIC ALGORITHM EXTENSIONS)
+    it() bf(INTERNET / NETWORKING)
+    it() bf(OPENSSL AND ENCRYPTION)
+    it() bf(PATTERN MATCHING)
+    it() bf(PROCESSES)
+    it() bf(STREAMS AND FILES)
+    it() bf(TABLES)
+    it() bf(VARIOUS OTHER CLASSES)
+    )    
 
     itemization(
     it() bf(COMMAND LINE INTERFACE AND CONFIGURATION FILES)
@@ -351,7 +373,6 @@ manpagesection(CATEGORIES)
     
     bf(FBB::DateTime): Manipulations with date and time values.nl()
     Manpage(datetime)
-
 
     it() bf(ERRORS AND MESSAGE HANDLING)
 
@@ -419,7 +440,7 @@ manpagesection(CATEGORIES)
 
 
 
-    it() bf(INTERNET)
+    it() bf(INTERNET / NETWORKING)
 
     bf(FBB::CGI): a class implementing the facilities accessing the data made 
     available through the Common Gateway Interface.nl()
@@ -471,6 +492,14 @@ manpagesection(CATEGORIES)
     Manpage(socketbase)
 
 
+    it() bf(OPENSSL AND ENCRYPTION)
+
+    bf(FBB::BigInt): Wrapper class around the openssl BN_ functions for
+    unlimited integer precision arithmetic. nl()
+    Manpage(bigint)
+
+    bf(FBB::DigestBuf): Computing message digests.nl()
+    Manpage(digestbuf)
 
 
     it() bf(PATTERN MATCHING)
@@ -496,6 +525,9 @@ manpagesection(CATEGORIES)
 
 
     it() bf(STREAMS AND FILES)
+
+    bf(FBB::DigestBuf): Computeting message digests.nl()
+    Manpage(digestbuf)
 
     bf(FBB::IFdStream): stream extracting information from a device whose
         file descriptor is available. nl()
@@ -547,6 +579,10 @@ manpagesection(CATEGORIES)
     bf(FBB::OFoldStreambuf): bf(OFilterStreambuf) (bf(std::streambuf))
     specialization folding text lines between left and right margins.nl()
     Manpage(ofoldstreambuf)
+
+    bf(FBB::OHexStreambuf): bf(OHexStreambuf) (bf(std::streambuf))
+    specialization inserting characters into a stream by their hex values.nl()
+    Manpage(ohexstreambuf)
 
     bf(FBB::Pipe): Defines a system level pipe. nl()
     Manpage(pipe)
