@@ -13,7 +13,7 @@ manpagesynopsis()
 
 manpagedescription()
     bf(FBB::OFdStreambuf) objects may be used as a bf(std::streambuf) of
-tt(std::ostream) objects to allow extractions from a file descriptor.
+tt(std::ostream) objects to allow insertions into a file descriptor.
 
 File descriptors are not defined within the context of bf(C++),
 but they can be used on operating systems that support the concept. Realize
@@ -36,14 +36,14 @@ the object must not be closed.
 
 manpagesection(CONSTRUCTORS)
     itemization(
-    itb(Ofdstreambuf())
+    itb(OFdStreambuf())
         This constructor initializes the streambuf, without associating it to
 a file descriptor, and without using buffering. The member bf(open()) can be
 used to associate the object later on with a file descriptor and optionally a
 buffer size.  When the object is destroyed or if the mode-less overloaded
 version of the bf(open) member is called, the file descriptor will be closed.
 
-    itb(Ofdstreambuf(Mode mode))
+    itb(OFdStreambuf(Mode mode))
         This constructor initializes the streambuf, without associating it to
 a file descriptor, and without using buffering. The member bf(open()) can be
 used to associate the object later on with a file descriptor and optionally a
