@@ -1,0 +1,86 @@
+includefile(header.inc)
+
+COMMENT(manpage, section, releasedate, archive, short name)
+manpage(FBB::OHexStreambuf)(3bobcat)(_CurYrs_)
+    (libbobcat1-dev__CurVers_-x.tar.gz)(Write hex values)
+
+manpagename(FBB::OHexStreambuf)(Writes characters written to an ostream as hex
+values)
+
+manpagesynopsis()
+    bf(#include <bobcat/ohexstreambuf>)nl()
+    Linking option: tt(-lbobcat) 
+
+manpagedescription()
+
+    bf(OHexStreambuf) is a specialization of tt(FBB::OFilterStreambuf)
+inserting all the characters it receives to a destination file as 2-character
+wide hexadecimal values. Optionally a maximum linelength can be specified.
+
+Note that all information received by an tt(OHexStreambuf) object is inserted
+as (a series of) hexadecimal values, not only plain characters. E.g., when
+inserting the value 123 the characters tt('1', '2') and tt('3') are
+successively inserted and so this will result in the string tt(313233) being
+inserted into the destination stream.
+
+includefile(namespace.inc)
+
+manpagesection(INHERITS FROM)
+    FBB::OFilterStreambuf
+
+
+manpagesection(CONSTRUCTOR)
+    itemization(
+    itb(OFoldStreambuf(std::ostream &stream, size_t width = 0))
+    The hexadecimal characters produced by the tt(OFoldStreambuf) object will
+be inserted into tt(stream). Optionally the maximum line width (in number of
+characters) may be specified using tt(width). The (default) value 0 indicates
+that no line breaks are requested.
+    )
+
+    The destructor writes any buffered information to the destination stream
+and will then flushes the destination stream.
+
+manpagesection(MEMBER FUNCTIONS)
+     All members of bf(FBB::OFilterStreambuf), in particular its tt(out()) and
+tt(open()) members are available, as bf(FBB::OHexStreambuf) inherits from
+this class.
+    itemization(
+    itb(size_t size() const)
+        This member returns the next column offset where the next
+hexadecimal character will appear. If a maximum line length is requested and
+tt(size()) does not return 0 then the last line inserted was not terminated by
+a tt('\n') character. See also the example below.
+
+    This member's return value is undefined if  no maximum line length was
+requested. 
+    )
+
+manpagesection(EXAMPLE)
+        verb(
+	#include <iostream>
+	#include <bobcat/ohexstreambuf>
+	
+	using namespace std;
+	using namespace FBB;
+	
+	int main()
+	{   
+	    OHexStreambuf ohex(cout, 40);
+	    ostream out(&ohex);
+	    out << cin.rdbuf();
+	    if (ohex.size())
+	        cout << '\n';
+	}
+	        )
+
+manpagefiles()
+    em(bobcat/ohexstreambuf) - defines the class interface
+
+manpageseealso()
+    bf(bobcat)(7), bf(ofilterstreambuf)(3bobcat)
+
+manpagebugs()
+    None Reported.
+
+includefile(trailer.inc)
