@@ -1,3 +1,12 @@
+bobcat (2.04.00)
+
+  * BigInt has been greatly enhanced and extended. Many members have received
+    new prototypes.
+  * New Class: OHexStreambuf, inserting its characters as hex numbers into a
+    specified std::ostream.
+  * New Class: DigestBuf, computing various types of message digests from
+    information written to an std::ostream
+
 bobcat (2.03.00)
 
   * Bobcat is compiled by g++ --std=c++0x.
